ccissuanceservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cc-issuance-app
  namespace: credit-card-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cc-issuance-app
  template:
    metadata:
      labels:
        app: cc-issuance-app
    spec:
      containers:
        - name: cc-issuance-app
          image: 2023cs03011/cc-issuance-service:latest # Use the image name you build
          imagePullPolicy: Always 
          ports:
            - containerPort: 5000
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: cc-issuance-app-rollout
  namespace: credit-card-app
spec:
  replicas: 1
  strategy:
    blueGreen:
      activeService: cc-issuance-app-service  # Stable service
      previewService: cc-issuance-app-service-preview  # New version preview
      autoPromotionEnabled: true  # Requires manual promotion
  selector:
    matchLabels:
      app: cc-issuance-app
  template:
    metadata:
      labels:
        app: cc-issuance-app
    spec:
      containers:
        - name: cc-issuance-app
          image: 2023cs03011/cc-issuance-service:latest  # Update image to trigger rollout
          imagePullPolicy: Always 
          ports:
            - containerPort: 5000
