ccissuanceservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cc-issuance-app-service
  namespace: credit-card-app
spec:
  type: NodePort
  selector:
    app: cc-issuance-app
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30009
---
apiVersion: v1
kind: Service
metadata:
  name: cc-issuance-app-service-preview
  namespace: credit-card-app
spec:
  type: NodePort
  selector:
    app: cc-issuance-app
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30019
